welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:60: error: not found: value faire
		faire Colonne();
                ^